@@ -3,6 +3,9 @@ Changelog
 
 5.1-dev - (unreleased)
 ----------------------
+* Feature: added ability to pass a lifetime key to the cache decorator in 
+  order to cache it for a determined period different from the default lifetime
+  [ichimdav #13677]
 * Upgrade step: (optional)
   Within ZMI > portal_properties > site_properties add an **int** property
   called **memcached_defaultLifetime** and set it's value to
